--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar.JPG" alt="" /></a>
 					<h1><strong>I am Ankur Bag</strong> ,<br /> Software Engineer<br />
 					with hunger to learn<br />
 					</h1>
