Updated the Webpage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,8 +19,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.JPG" alt="" /></a>
-					<h1><strong>I am Ankur Bag</strong> ,<br /> Software Engineer<br />
-					with hunger to learn<br />
+					<h1><strong>I am Ankur Bag</strong> ,<br /> Software Engg Co-op,Cloud Services at Avigilon<br />
+					Grad Student at <strong>NEU</strong><br />
 					</h1>
 				</div>
 			</header>
@@ -34,7 +34,14 @@
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am an experienced software engineer with a passion for software designing and software development in Java / J2EE applications.Currently, I am pursuing the master of science in Information Systems at Northeastern University, Boston. 
+						
+I am particularly interested in software architecture design and web application development. I am a technology enthusiast; the reason why I keep learning new things.
+
+I have over 3years experience in application development and maintenance in Java/J2EE. During my tenure, I have gained knowledge of the Software Development Lifecycle (SDLC), Agile methodology and scrum model. 
+
+★Key Expertise - Java, J2EE, HTML5, CSS3, and JavaScript.
+★Specialties - Software development, Agile methodology, Software architecture and design, Enterprise application development and maintenance</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
