--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Big Data Enthusiast<br />
+							Web-App Developer.</h2>
 						</header>
-						<p>I am an experienced software engineer with a passion for software designing and software development in Java / J2EE applications.Currently, I am pursuing the master of science in Information Systems at Northeastern University, Boston. 
-						
-I am particularly interested in software architecture design and web application development. I am a technology enthusiast; the reason why I keep learning new things.
-
-I have over 3years experience in application development and maintenance in Java/J2EE. During my tenure, I have gained knowledge of the Software Development Lifecycle (SDLC), Agile methodology and scrum model. 
-
-★Key Expertise - Java, J2EE, HTML5, CSS3, and JavaScript.
+						<p style="text-align:justify">I am an experienced software engineer with a passion for software designing and software development.Currently, I am pursuing the master of science in Information Systems at Northeastern University, Boston. 
+						</p>
+						<p style="text-align:justify">I am particularly interested in software architecture design and web application development. I am a technology enthusiast; the reason why I keep learning new things.
+						</p>
+						<p style="text-align:justify">I have over 3years experience in application development and maintenance in Java/J2EE. During my tenure, I have gained knowledge of the Software Development Lifecycle (SDLC), Agile methodology and scrum model. 
+						</p>
+						<p style="text-align:justify">★ Key Expertise - Java, J2EE, HTML5, CSS3, and JavaScript.
 ★Specialties - Software development, Agile methodology, Software architecture and design, Enterprise application development and maintenance</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -90,7 +90,7 @@ I have over 3years experience in application development and maintenance in Java
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Happy to get in touch.</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
@@ -108,17 +108,21 @@ I have over 3years experience in application development and maintenance in Java
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										43,St Germain Street<br />
+										Boston, MA 02115<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
+										617-259-8868
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="mailto:bagankur@gmail.com">bagankur@gmail.com</a>
+									</li>
+									<li>
+										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+										<a href="mailto:bag.a@husky.neu.edu">bag.a@husky.neu.edu</a>
 									</li>
 								</ul>
 							</div>
@@ -451,13 +455,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://github.com/ankurbag" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ankurbag/" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ankur Bag</li>
 					</ul>
 				</div>
 			</footer>
