--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/01.jpeg" class="image fit thumb"><img src="images/thumbs/01_thumb_2.jpg" alt="" /></a>
 								<h3>Project 1</h3>
-								<p>Project Description</p>
+								<p>Facebook V: Predicting Check Ins</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
