--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="sidebar-menu hidden-xs hidden-sm">
             <div class="top-section">
                 <div class="profile-image">
-                    <img src="img/profile.jpg" alt="Volton">
+                    <img src="img/avatar.JPG" alt="Volton">
                 </div>
                 <h3 class="profile-title">Ankur Bag</h3>
                 <p class="profile-description">Software Engineer</p>
