--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="row projects-holder">
                         <div class="col-md-6 col-sm-6">
                             <div class="project-item">
-                                <img src="img/Google-hackathon.jpg" alt="">
+                                <img src="img/google-hackathon.jpg" alt="">
                                 <div class="project-hover">
                                     <div class="inside">
                                         <h5><a href="https://github.com/HackingForGood/refugee-network">Hack for Good, Havard Business School</a></h5>
